[change]履歴の構造体を修正
